--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
-    "antd": "^5.5.2",
+    "daisyui": "^3.7.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.0.4"
   }
 }
