--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/node": "^20.8.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -26,6 +27,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
