--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "eslint-config-next": "13.4.19",
     "lodash": "^4.17.21",
     "next": "13.4.19",
-    "postcss": "8.4.29",
+    "postcss": ">=8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "postcss": ">=8.4.31"
   }
 }
