--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.3",
+    "styled-components": "^6.1.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "postcss": ">=8.4.31"
+    "postcss": ">=8.4.31",
+    "tailwind-styled-components": "^2.2.0"
   }
 }
