--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^20.8.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/react-html-parser": "^2.0.6",
     "autoprefixer": "10.4.15",
     "daisyui": "^3.7.3",
     "eslint": "8.49.0",
@@ -27,6 +28,7 @@
     "postcss": ">=8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^8.1.3",
     "styled-components": "^6.1.1",
     "tailwindcss": "3.3.3",
