--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-html-parser": "^2.0.2",
+    "react-qr-code": "^2.0.15",
     "react-redux": "^8.1.3",
     "styled-components": "^6.1.1",
     "tailwindcss": "3.3.3",
