--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "eslint-config-next": "13.4.19",
     "jsencrypt": "^3.3.2",
     "lodash": "^4.17.21",
-    "next": "13.4.19",
+    "next": "^14.2.5",
     "postcss": ">=8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-html-parser": "^2.0.2",
     "react-qr-code": "^2.0.15",
     "react-redux": "^8.1.3",
@@ -37,7 +37,6 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "postcss": ">=8.4.31",
     "tailwind-styled-components": "^2.2.0"
   }
 }
