update package version

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@types/react-html-parser": "^2.0.6",
     "autoprefixer": "10.4.15",
     "daisyui": "^3.7.3",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "eslint": "^9.15.0",
+    "eslint-config-next": "^15.0.3",
     "jsencrypt": "^3.3.2",
     "lodash": "^4.17.21",
     "next": "^14.2.5",
