--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -18,35 +14,15 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "components/*": [
-        "./src/components/*"
-      ],
-      "pages/*": [
-        "./src/pages/*"
-      ],
-      "reduxs/*": [
-        "./src/reduxs/*"
-      ],
-      "styles/*": [
-        "./src/styles/*"
-      ],
-      "templates/*": [
-        "./src/templates/*"
-      ],
-      "utils/*": [
-        "./src/utils/*"
-      ],
-      "store": [
-        "./src/store.ts"
-      ],
+      "components/*": ["./src/components/*"],
+      "pages/*": ["./src/pages/*"],
+      "reduxs/*": ["./src/reduxs/*"],
+      "styles/*": ["./src/styles/*"],
+      "templates/*": ["./src/templates/*"],
+      "utils/*": ["./src/utils/*"],
+      "store": ["./src/store.ts"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
