Revert "chore: add config and reformatter with prettier"
This reverts commit fbd00b96e5f702f7f439b6096e062c2b8560521d.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -14,15 +18,35 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "components/*": ["./src/components/*"],
-      "pages/*": ["./src/pages/*"],
-      "reduxs/*": ["./src/reduxs/*"],
-      "styles/*": ["./src/styles/*"],
-      "templates/*": ["./src/templates/*"],
-      "utils/*": ["./src/utils/*"],
-      "store": ["./src/store.ts"]
+      "components/*": [
+        "./src/components/*"
+      ],
+      "pages/*": [
+        "./src/pages/*"
+      ],
+      "reduxs/*": [
+        "./src/reduxs/*"
+      ],
+      "styles/*": [
+        "./src/styles/*"
+      ],
+      "templates/*": [
+        "./src/templates/*"
+      ],
+      "utils/*": [
+        "./src/utils/*"
+      ],
+      "store": [
+        "./src/store.ts"
+      ],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
