--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "firebase login && rm -rf .next .firebase && next build && firebase deploy --only hosting && firebase logout",
-    "format": "prettier --write ."
+    "deploy": "firebase login && rm -rf .next .firebase && next build && firebase deploy --only hosting && firebase logout"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
