--- a/package.json
+++ b/package.json
@@ -15,28 +15,32 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "@reduxjs/toolkit": "^1.9.7",
-    "@types/node": "^20.8.0",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "@types/react-html-parser": "^2.0.6",
-    "autoprefixer": "10.4.15",
-    "daisyui": "^3.7.3",
-    "eslint": "^9.15.0",
-    "eslint-config-next": "^15.0.3",
     "jsencrypt": "^3.3.2",
     "lodash": "^4.17.21",
-    "next": "^14.2.25",
-    "postcss": ">=8.4.31",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "19.2.4",
     "react-html-parser": "^2.0.2",
     "react-qr-code": "^2.0.15",
-    "react-redux": "^8.1.3",
-    "styled-components": "^6.1.1",
+    "react-redux": "^9.2.0",
+    "styled-components": "^6.1.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.8.0",
+    "@types/react": "19.2.10",
+    "@types/react-dom": "19.2.3",
+    "@types/react-html-parser": "^2.0.7",
+    "autoprefixer": "10.4.15",
+    "daisyui": "^3.7.3",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "16.1.6",
+    "postcss": ">=8.4.31",
+    "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
-  "devDependencies": {
-    "tailwind-styled-components": "^2.2.0"
+  "resolutions": {
+    "@types/react": "19.2.10",
+    "@types/react-dom": "19.2.3"
   }
 }
