--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "paths": {
       "components/*": [
@@ -38,7 +38,7 @@
       ],
       "store": [
         "./src/store.ts"
-      ],
+      ]
     }
   },
   "include": [
