--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
+    "@types/domutils": "^2.1.0",
     "@types/node": "^20.8.0",
     "@types/react": "19.2.10",
     "@types/react-dom": "19.2.3",
